--- a/state/templates/state/gov/treasury.html
+++ b/state/templates/state/gov/treasury.html
@@ -5,12 +5,13 @@
 {% load dict_key %}
 {% load has_key %}
 {% load l10n %}{% load i18n %}
+{% load get_key_list %}
 
 {% if treasury %}
 <div id="treasury" class="tab-pane fade" style="height: 700px; overflow-x: hidden; overflow-y: auto;">
     <div class="row" style="background: #F1F3F4; margin-top: 20px">
         <div class="col-xs-2 col-sm-2 col-md-2">
-            {{ storage_cl|get_attr:'valut'|dict_key:'cash' }}:
+            {% trans 'Наличные' context "goods" %}:
         </div>
         <div class="col-xs-5 col-sm-5 col-md-5">
             <p style="color: #85bb65">
@@ -27,29 +28,37 @@
             </p>
         </div>
     </div>
-    {% for group in storage_cl|get_attr:'types' %}
-    <div class="row" align="center" style="margin-top: 20px">
-        {{ storage_cl|get_attr:'types'|dict_key:group }}
-    </div>
-        {% for good in storage_cl|get_attr:group %}
-    <div class="row" {% if forloop.counter|get_mod:2 == 1 %}style="background: #F1F3F4"{% endif %}>
-        <div class="col-xs-2 col-sm-2 col-md-2">
-            {{ storage_cl|get_attr:group|dict_key:good }}:
-        </div>
-        <div class="col-xs-5 col-sm-5 col-md-5">
-            {{ treasury|get_attr:good }}
-        </div>
-        <div class="col-xs-5 col-sm-5 col-md-5">
-            <p style="color: #FF0000">
-                {% if locks|has_key:good %}
-                    {{ locks|dict_key:good }}
-                {% else %}
-                0
-                {% endif %}
-            </p>
-        </div>
-    </div>
-        {% endfor %}
+    {% for type in type_dict|get_key_list %}
+        {% if goods_dict|has_key:type %}
+            <div class="row" align="center" style="margin-top: 20px">
+                {{ type_dict|dict_key:type }}
+            </div>
+            {% for stock in goods_dict|dict_key:type %}
+                {% with good=stock|get_attr:'good' %}
+                    {% if stock|get_attr:'stock' > 0 or locks|has_key:good %}
+            <div class="row" {% if forloop.counter|get_mod:2 == 1 %}style="background: #F1F3F4"{% endif %}>
+                <div class="col-xs-2 col-sm-2 col-md-2">
+                    {{ good|get_attr:'name' }}:
+                </div>
+                <div class="col-xs-5 col-sm-5 col-md-5">
+                    {% if stock|get_attr:'stock' > 0 %}
+                        {{ stock|get_attr:'stock' }}
+                    {% endif %}
+                </div>
+                <div class="col-xs-5 col-sm-5 col-md-5">
+                    <p style="color: #FF0000">
+                        {% if locks|has_key:good %}
+                            {{ locks|dict_key:good }}
+                        {% else %}
+                        0
+                        {% endif %}
+                    </p>
+                </div>
+            </div>
+                    {% endif %}
+                {% endwith %}
+            {% endfor %}
+        {% endif %}
     {% endfor %}
 </div>
 {% endif %}
