--- a/bill/templates/state/gov/reviewed/purchase_auction.html
+++ b/bill/templates/state/gov/reviewed/purchase_auction.html
@@ -29,7 +29,7 @@
             {{ bill.buy_value }}
         </div>
         <div class="row" style="margin-top: 25px;">
-            {{ bill.get_good_display }}
+            {{ bill.good.name }}
         </div>
     </div>
     <div class="col-xs-3 col-sm-3 col-md-3">
