--- a/factory/templates/factory/redesign/factory.html
+++ b/factory/templates/factory/redesign/factory.html
@@ -27,49 +27,54 @@
 
           var groups_n_goods = {};
 
-          {% for group in categories %}
-              groups_n_goods['{{ group }}'] = {};
-              {% for good in storage_cl|get_attr:group %}
-                  groups_n_goods['{{ group }}']['{{ good }}'] = '{{ storage_cl|get_attr:group|dict_key:good }}';
+          {% for type in good_by_type|get_key_list %}
+              groups_n_goods['{{ type }}'] = [];
+              {% for good in good_by_type|dict_key:type %}
+                  groups_n_goods['{{ type }}'].push('{% localize off %}{{ good }}{% endlocalize %}');
               {% endfor %}
           {% endfor %}
 
-          var goods_names = {};
-          goods_names['energy'] = '{% trans 'Энергия' context "factory" %}';
-          {% for crude in crude_list %}
-              {% for good in storage_cl|get_attr:crude %}
-                  goods_names['{{ good }}'] = '{{ storage_cl|get_attr:crude|dict_key:good }}';
-              {% endfor %}
-          {% endfor %}
+            var goods_names = {};
+            goods_names['energy'] = '{% trans 'Энергия' context "factory" %}';
+            {% for good_key in good_names|get_key_list %}
+                goods_names['{% localize off %}{{ good_key }}{% endlocalize %}'] = '{{ good_names|dict_key:good_key }}';
+            {% endfor %}
 
           var total_stocks = {};
-          {% for storage in storages %}
-              total_stocks["{% localize off %}{{ storage|dict_key:'pk' }}{% endlocalize %}"] = {};
-              {% for group in crude_list %}
-                  {% for good in storage_cl|get_attr:group %}
-                      total_stocks["{% localize off %}{{ storage|dict_key:'pk' }}{% endlocalize %}"]['{{ good }}'] = {% localize off %}{{ storage|dict_key:good }}{% endlocalize %};
-                      {% if good != 'cash' %}
-                      {% with good_cap=good|get_sum:'_cap' %}
-                      total_stocks["{% localize off %}{{ storage|dict_key:'pk' }}{% endlocalize %}"]['{{ good }}_cap'] = {% localize off %}{{ storage|dict_key:good_cap }}{% endlocalize %};
-                      {% endwith %}
-                      {% endif %}
-                  {% endfor %}
-              {% endfor %}
+
+          {% for storage in total_stocks|get_key_list %}
+            total_stocks["{% localize off %}{{ storage }}{% endlocalize %}"] = {};
+
+            {% for good_pk in total_stocks|dict_key:storage|get_key_list %}
+
+                total_stocks["{% localize off %}{{ storage }}{% endlocalize %}"]['{{ good_pk }}'] = {% localize off %}{{ total_stocks|dict_key:storage|dict_key:good_pk }}{% endlocalize %};
+
+            {% endfor %}
+
           {% endfor %}
 
-          var schemas = {};
-          {% for schema in project_cl|get_attr:'schemas' %}
-              schemas["{{ schema.0 }}"] = {};
-              schemas["{{ schema.0 }}"]['energy'] = {{ project_cl|get_attr:schema.0|dict_key:'energy' }};
-              {% for variant in project_cl|get_attr:schema.0|dict_key:'resources' %}
-                  schemas["{{ schema.0 }}"]["{{ forloop.counter }}"] = {};
-                  {% with counter=forloop.counter %}
-                      {% for good in variant %}
-                          schemas["{{ schema.0 }}"]["{{ counter }}"]["{{ good }}"] = {% localize off %}{{ variant|dict_key:good }}{% endlocalize %};
-                      {% endfor %}
-                  {% endwith %}
-              {% endfor %}
-          {% endfor %}
+
+            var schemas = {};
+
+            {% for good in schemas|get_key_list %}
+                schemas["{{ good }}"] = {};
+
+                {% for schema in schemas|dict_key:good|get_key_list %}
+
+                    schemas["{{ good }}"]["{{ schema }}"] = {};
+
+                    {% with components=schemas|dict_key:good|dict_key:schema %}
+                        {% for component in components|get_key_list %}
+
+                            schemas["{{ good }}"]["{{ schema }}"]["{{ component }}"] = {{ components|dict_key:component }};
+
+                        {% endfor %}
+                    {% endwith %}
+
+                {% endfor %}
+
+            {% endfor %}
+
       {% endlocalize %}
       </script>
 
@@ -77,10 +82,10 @@
 
       <div class="ct__selectWithImage">
           {% with store_1=storages|first %}
-          <div class="ct__selectWithImage-selected" id="storage" data-value="{% localize off %}{{ store_1|dict_key:'pk' }}{% endlocalize %}">
-              <img src="static/img/regions/{{ store_1|dict_key:'region__on_map_id' }}.png">
+          <div class="ct__selectWithImage-selected" id="storage" data-value="{% localize off %}{{ store_1.pk }}{% endlocalize %}">
+              <img src="static/img/regions/{{ store_1.region.on_map_id }}.png">
               <div class="ct__selectWithImage-firstText">
-                  {% with region_name=store_1|dict_key:'region__region_name' %}
+                  {% with region_name=store_1.region.region_name %}
                   <span>{% trans region_name context "regions_list" %}</span>
                   {% endwith %}
                   <svg class="ct__selectWithImage-arrow" width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -91,7 +96,7 @@
           {% endwith %}
           <div class="ct__selectWithImage-content custom-scroll custom-scroll--alt">
               {% for storage in storages %}
-              <div data-value="{% localize off %}{{ storage|dict_key:'pk' }}{% endlocalize %}"><img src="static/img/regions/{{ storage|dict_key:'region__on_map_id' }}.png">{% with region_name=storage|dict_key:'region__region_name' %}{% trans region_name context "regions_list" %}{% endwith %}</div>
+              <div data-value="{% localize off %}{{ storage.pk }}{% endlocalize %}"><img src="static/img/regions/{{ storage.region.on_map_id }}.png">{% with region_name=storage.region.region_name %}{% trans region_name context "regions_list" %}{% endwith %}</div>
               {% endfor %}
           </div>
       </div>
@@ -111,11 +116,9 @@
       <label class="factory__topLabel ct__wide-modal-label-select ct__wide-modal-label-select--min">
         <select disabled name="good" id="good">
           <option id="good_default" value='default' disabled selected>{% trans 'выбор товара' context "factory" %}</option>
-          {% for group in categories %}
-              {% for good in storage_cl|get_attr:group %}
-              {% if good != 'station' %}
-          <option id="good_{{ good }}" value='{{ good }}' style="display: none">{{ storage_cl|get_attr:group|dict_key:good }}</option>
-              {% endif %}
+          {% for type in good_by_type|get_key_list %}
+              {% for good in good_by_type|dict_key:type %}
+          <option id="good_{% localize off %}{{ good }}{% endlocalize %}" value='{% localize off %}{{ good }}{% endlocalize %}' style="display: none">{{ good_names|dict_key:good }}</option>
               {% endfor %}
           {% endfor %}
         </select>
