--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -817,6 +817,25 @@ a {
   height: 31rem;
 }
 
+.nav__svg-newMessage {
+  position: absolute;
+  right: 24rem;
+  top: 50%;
+  transform: translateY(-50%);
+  display: block;
+  width: 47rem;
+  height: 32rem;
+  border: 0;
+  background-color: transparent;
+  padding: 0;
+}
+
+.nav__svg-newMessage svg {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
 .icon-main svg {
   width: 46rem;
   height: 46rem;
@@ -944,6 +963,161 @@ a {
     margin-top: 100rem;
     margin-left: 330rem;
   }
+}
+
+/*! AvatarBorders */
+
+.avabord {
+  padding-top: 14rem;
+  padding-bottom: 24rem;
+  height: calc(100% - 60rem);
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.avabord__title {
+  margin: 0;
+  margin-bottom: 24rem;
+}
+
+.avabord__grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 100%;
+  padding: 12rem;
+  gap: 12rem;
+  list-style: none;
+}
+
+.avabord__grid button {
+  position: relative;
+  display: block;
+  width: 162rem;
+  height: 162rem;
+  border: 1px solid var(--c10two);
+  background-color: transparent;
+  padding: 0;
+  cursor: pointer;
+}
+
+.avabord__grid button.active::after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: block;
+  width: 67rem;
+  height: 67rem;
+  content: '';
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  background-image: url("data:image/svg+xml,%3Csvg width='67' height='67' viewBox='0 0 67 67' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='33.5' cy='33.5' r='30.5' stroke='black' stroke-width='6'/%3E%3Ccircle cx='33.5' cy='33.5' r='30.5' stroke='%23EB9929' stroke-width='4'/%3E%3Cpath d='M47 19L28.5122 37.4668L19.5488 28.516L14 34.057L28.5122 48.5488L52.5488 24.541L47 19Z' fill='white' stroke='black'/%3E%3C/svg%3E%0A");
+}
+
+.avabord__grid img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+@media (min-width: 1200px) {
+  .avabord {
+    padding-top: 30rem;
+    padding-bottom: 30rem;
+    height: calc(100vh - 100rem);
+    margin-top: 100rem;
+    margin-left: 330rem;
+  }
+
+  .avabord__grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    width: max-content;
+    margin: 0 auto;
+    padding: 12rem;
+    gap: 12rem;
+    list-style: none;
+  }
+
+  .avabord__grid button {
+    display: block;
+    width: 200rem;
+    height: 200rem;
+  }
+}
+
+/*! Dialogs */
+
+.dialogs {
+  padding-top: 14rem;
+  padding-bottom: 24rem;
+  height: calc(100% - 60rem);
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.dialogs__title {
+  margin: 0;
+  margin-bottom: 24rem;
+}
+
+.dialogs__grid {
+  display: grid;
+  width: 100%;
+  padding: 12rem;
+  gap: 12rem;
+  list-style: none;
+}
+
+@media (min-width: 1200px) {
+  .dialogs {
+    padding-top: 30rem;
+    padding-bottom: 30rem;
+    height: calc(100vh - 100rem);
+    margin-top: 100rem;
+    margin-left: 330rem;
+  }
+
+  .dialogs__grid {
+  }
+
+}
+
+/*! Dialog */
+
+.dialog {
+  padding-top: 14rem;
+  padding-bottom: 24rem;
+  height: calc(100% - 60rem);
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.dialog__title {
+  margin: 0;
+  margin-bottom: 24rem;
+}
+
+.dialog__container {
+  height: calc(100% - 45rem);
+}
+
+@media (min-width: 1200px) {
+  .dialog {
+    padding-top: 30rem;
+    padding-bottom: 10rem;
+    height: calc(100% - 100rem);
+    margin-top: 100rem;
+    margin-left: 330rem;
+  }
+
+  .dialog__container {
+    height: calc(100% - 45rem);
+    padding: 0 24rem;
+  }
+
 }
 
 /*! Store */
@@ -2823,6 +2997,11 @@ p.overview__love-stat-timer {
   height: 100%;
 }
 
+.overview__chat--dialog {
+  display: block;
+  height: 100%;
+}
+
 .overview__chat.active {
   display: block;
   animation: fade-translate 0.25s ease both;
@@ -2919,6 +3098,14 @@ p.overview__love-stat-timer {
   width: 286rem;
 }
 
+.overview__chat-message--dialog .overview__chat-message-body p {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .overview__chat-message-body p.moder {
   width: 266rem;
 }
@@ -2952,6 +3139,11 @@ p.overview__love-stat-timer {
   object-fit: contain;
 }
 
+.overview__chat-message--dialog .overview__chat-message-sticker {
+  width: 45rem;
+  height: 45rem;
+}
+
 .overview__chat-controls {
   position: fixed;
   bottom: 0;
@@ -2961,6 +3153,10 @@ p.overview__love-stat-timer {
   display: flex;
   justify-content: space-between;
   padding: 12rem;
+}
+
+.overview__chat-controls--dialog {
+  bottom: 60rem;
 }
 
 .overview__chat-controls-input {
@@ -3033,9 +3229,11 @@ p.overview__love-stat-timer {
   justify-content: center;
   align-items: center;
   height: 36rem;
-  width: 40rem;
+  width: 100rem;
   padding: 0;
-  border: 0;
+  border: 1px solid var(--c10two);
+  position: relative;
+  top: 1px;
   background-color: transparent;
 }
 
@@ -3245,6 +3443,9 @@ p.overview__love-stat-timer {
     padding: 30rem 0;
     padding-top: 8rem;
   }
+  .overview__chat-controls--dialog {
+    bottom: 0;
+  }
   .overview__chat-controls-input {
     width: 100%;
     height: 30rem;
@@ -3262,6 +3463,15 @@ p.overview__love-stat-timer {
     width: 360rem;
     font-size: 16rem;
     word-wrap: break-word;
+  }
+  .overview__chat-message-body--dialog p {
+    width: 100%;
+  }
+  .dialog .overview__chat-message {
+    width: 45%;
+  }
+  .dialog .overview__chat-message--my {
+    margin-left: auto;
   }
   .overview__chat-ava-link {
     flex-shrink: 0;
@@ -3317,6 +3527,9 @@ p.overview__love-stat-timer {
     right: 0;
     bottom: 85rem;
     width: 510rem;
+  }
+  .overview__stickers--dialog {
+    bottom: 155rem;
   }
   .overview__stickers-close-overlay {
     left: initial;
@@ -4528,6 +4741,10 @@ padding-right: 6rem;
   align-items: center;
 }
 
+.gover__withImage a {
+  color: var(--c10two);
+}
+
 .gover__withImage img {
   display: block;
   width: 34rem;
@@ -4884,6 +5101,18 @@ padding-right: 6rem;
   text-align: center;
 }
 
+.gover__powerArr button {
+  padding: 3rem;
+  border: 0;
+  background-color: transparent;
+  cursor: pointer;
+  width: 30rem;
+  height: 30rem;
+  background-size: 24rem 24rem;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 @media (min-width: 1200px) {
   .gover {
     padding-top: 14rem;
@@ -4977,6 +5206,135 @@ padding-right: 6rem;
   .gover__tableCancel,
   .gover__tableVote {
     display: table-cell;
+  }
+}
+
+/*! SVG Images */
+
+.redDownArrImage {
+  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 17.5L11.5 17.5L11.5 18L11.5 22.7929L0.707109 12L11.5 1.20711L11.5 6L11.5 6.5L12 6.5L23.5 6.5L23.5 17.5L12 17.5Z' fill='%23FF3D00' stroke='black'/%3E%3C/svg%3E%0A");
+}
+
+.greenUpArrImage {
+  background-image: url("data:image/svg+xml,%3Csvg width='25' height='25' viewBox='0 0 25 25' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12.5 7.29289L13 7.29289L13 6.79289L13 2L23.7928 12.7929L13 23.5858L13 18.7929L13 18.2929L12.5 18.2929L0.999954 18.2929L0.999954 7.29289L12.5 7.29289Z' fill='%2333FF00' stroke='black'/%3E%3C/svg%3E%0A");
+}
+
+.whiteInfoImage {
+  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M9.25 9.66667H8.75V10.1667V12V12.5H9.25H10.5833V17.5V18H11.0833H12.9167H13.4167V17.5V10.1667V9.66667H12.9167H9.25ZM12 9.0625C12.9086 9.0625 13.6458 8.32531 13.6458 7.41667C13.6458 6.50802 12.9086 5.77083 12 5.77083C11.0914 5.77083 10.3542 6.50802 10.3542 7.41667C10.3542 8.32531 11.0914 9.0625 12 9.0625ZM12 23.5C18.3509 23.5 23.5 18.3509 23.5 12C23.5 5.64911 18.3509 0.5 12 0.5C5.64911 0.5 0.5 5.64911 0.5 12C0.5 18.3509 5.64911 23.5 12 23.5ZM12 3.33333C16.7784 3.33333 20.6667 7.22164 20.6667 12C20.6667 16.7784 16.7784 20.6667 12 20.6667C7.22164 20.6667 3.33333 16.7784 3.33333 12C3.33333 7.22164 7.22164 3.33333 12 3.33333Z' fill='white' stroke='black'/%3E%3C/svg%3E%0A");
+}
+
+/*! skills */
+
+.skills {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: calc(100% - 60rem);
+  padding-top: 12rem;
+  padding-bottom: 24rem;
+}
+
+.skills__title {
+  margin: 0;
+  margin-bottom: 24rem;
+}
+
+.skills__list {
+  display: flex;
+  flex-direction: column;
+  gap: 24rem;
+  padding: 0 24rem;
+  margin: 0;
+  list-style: none;
+}
+
+.skills__item {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 6rem;
+  padding: 6rem;
+  font-size: 14rem;
+  background-image: linear-gradient(to right bottom, var(--c30), transparent);
+}
+
+.skills__item::before {
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  display: block;
+  width: 12rem;
+  height: 12rem;
+  content: '';
+  clip-path: polygon(0% 0%, 100% 0%, 0% 100%);
+  background-color: var(--c60);
+}
+
+.skills__title {
+  margin: 0;
+  text-align: center;
+  font-size: 16rem;
+  font-weight: 500;
+}
+
+.skills__line {
+  flex-shrink: 0;
+  height: 1px;
+  width: 100%;
+  background-image: linear-gradient(to right, transparent, var(--c10one), transparent);
+}
+
+.skills__desc {
+  margin: 0;
+  text-align: center;
+  line-height: 1;
+  font-style: italic;
+}
+
+.skills__needs {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding-left: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.skills__needs li {
+  padding: 0 10rem;
+  flex-shrink: 0;
+}
+
+.skills__dopInfoBlock {
+  flex-shrink: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 6rem;
+}
+
+.skills__levelTime {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin: 0;
+}
+
+@media (min-width: 1200px) {
+  .skills {
+    top: 100rem;
+    left: 330rem;
+    width: calc(100% - 330rem);
+    height: calc(100% - 100rem);
+  }
+  .skills__list {
+    max-width: 600rem;
+    margin: 0 auto;
+  }
+  .skills__item {
+    padding: 6rem 12rem;
   }
 }
 
@@ -5809,8 +6167,9 @@ padding-right: 6rem;
   display: flex;
   flex-direction: column;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   padding: 0 24rem;
+  padding-bottom: 24rem;
   background-color: var(--c60);
   transition: all 0.3s ease;
 }
@@ -5819,6 +6178,8 @@ padding-right: 6rem;
   position: fixed;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
   transform: translateX(101%);
 }
 
@@ -5826,6 +6187,8 @@ padding-right: 6rem;
   position: fixed;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
   transform: translateX(-101%);
 }
 
