--- a/player/templates/player/redesign/menu.html
+++ b/player/templates/player/redesign/menu.html
@@ -11,6 +11,26 @@
 					</svg>
 				</div>
 			</a>
+			<button class="nav__svg-newMessage">
+				{% if False %}
+					{% if False %}
+					<svg width="47" height="32" viewBox="0 0 47 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M16.2073 19.5077L0 30.7274V6.07788L16.2073 19.5077Z" fill="var(--c10two)"/>
+						<path d="M34.5146 12.3325L25.8514 19.5128L42.0598 30.7326V14.4935C41.4485 14.6471 40.8211 14.7277 40.1908 14.7336C39.1327 14.7299 38.0859 14.5157 37.1114 14.1035C36.1369 13.6913 35.2542 13.0893 34.5146 12.3325Z" fill="var(--c10two)"/>
+						<path d="M1.93835 5.07349L21.3047 21.4528L33.5291 11.1147C32.6774 9.82086 32.2209 8.30706 32.2153 6.7581C32.2205 6.19119 32.2862 5.62646 32.4112 5.07349H1.93835Z" fill="var(--c10two)"/>
+						<path d="M17.2631 20.9802L2.27258 31.7794H9.91768H32.2556H39.9007L24.9082 20.9802L21.0857 23.7348L17.2631 20.9802Z" fill="var(--c10two)"/>
+						<path d="M40.3865 13.2132C44.0353 13.2132 46.9931 10.2553 46.9931 6.60661C46.9931 2.95788 44.0353 0 40.3865 0C36.7378 0 33.7799 2.95788 33.7799 6.60661C33.7799 10.2553 36.7378 13.2132 40.3865 13.2132Z" fill="var(--c10one)"/>
+					</svg>
+					{% else %}
+					<svg width="43" height="27" viewBox="0 0 43 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M16.2073 14.4351L0 25.6548V1.00525L16.2073 14.4351Z" fill="var(--c10two)"/>
+						<path d="M25.8514 14.4398L42.0587 25.6594V1.00989L25.8514 14.4398Z" fill="var(--c10two)"/>
+						<path d="M1.93774 0L9.08032 6.04102V6.04297L21.3049 16.3809L33.5295 6.04102L40.6702 0H32.4104H10.1975H1.93774Z" fill="var(--c10two)"/>
+						<path d="M17.2631 15.9076L2.27258 26.7068H9.91768H32.2556H39.9007L24.9082 15.9076L21.0857 18.6621L17.2631 15.9076Z" fill="var(--c10two)"/>
+					</svg>
+					{% endif %}
+				{% endif %}
+			</button>
 		</li>
 		<li class="nav__item">
 			<a href="/mining" class="nav__link icon-main">
