--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -744,7 +744,7 @@ a {
   width: 100vw;
   height: calc(100% - 60rem);
   background-color: var(--c60);
-  transform: translateX(100vw);
+  transform: translateX(150vw);
   transition: all 0.5s ease;
 }
 
@@ -828,6 +828,16 @@ a {
   border: 0;
   background-color: transparent;
   padding: 0;
+}
+
+.nav__svg-newMessage.animated {
+  animation: morgmorg ease 2s infinite;
+}
+
+@keyframes morgmorg {
+  0% {opacity: 1;}
+  50% {opacity: 0.5;}
+  100% {opacity: 1;}
 }
 
 .nav__svg-newMessage svg {
@@ -3532,6 +3542,13 @@ p.overview__love-stat-timer {
     bottom: 85rem;
     width: 510rem;
   }
+  .dialog .overview__stickers {
+    position: absolute;
+    left: initial;
+    right: 0;
+    bottom: 165rem;
+    width: 510rem;
+  }
   .overview__stickers--dialog {
     bottom: 155rem;
   }
@@ -3619,500 +3636,11 @@ p.overview__love-stat-timer {
   margin-bottom: 24rem;
 }
 
-.war__par {
-  width: 336rem;
-  margin: 0 auto;
-  margin-bottom: 24rem;
-  height: 24rem;
-  overflow: hidden;
-  transition: height 0.5s ease;
-}
-
-.war__par--visible {
-  height: initial;
-}
-
-.war__par-title-svg {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 24rem;
-  height: 24rem;
-}
-
-.war__par.active .war__par-title-svg{
-  transform: scaleY(-1);
-}
-
-.war__par-title {
-  position: relative;
-  display: block;
-  width: 100%;
-  height: 24rem;
-  font-weight: 400;
-  font-size: 18rem;
-  line-height: 24rem;
-  text-align: center;
-  letter-spacing: -0.04em;
-  color: var(--c10one);
-  background-color: var(--c30);
-  border: 0;
-  padding: 0;
-}
-
-.war__par-list {
-  padding: 8rem;
-  list-style: none;
-  margin: 0;
-  border: 1px solid var(--c30);
-  height: calc(100vh - 467rem);
-  overflow-y: auto;
-}
-
-.war__block {
-  position: relative;
-  height: 120rem;
-  font-size: 14rem;
-}
-
-.war__block-first-side {
-  position: absolute;
-  top: 12rem;
-  left: 0;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-.war__block-first-side img {
-  display: block;
-  width: 34rem;
-  height: 34rem;
-  margin-right: 4rem;
-}
-.war__block-first-side span {
-  width: 100rem;
-}
-
-.war__block-shield {
-  position: absolute;
-  top: 12rem;
-  right: 0;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-.war__block-shield.at-left-bottom {
-  right: initial;
-  top: initial;
-  left: 0;
-  bottom: 12rem;
-}
-
-.war__block-shield img {
-  order: 2;
-  display: block;
-  width: 34rem;
-  height: 34rem;
-  object-fit: contain;
-  object-position: center;
-}
-
-.war__block-shield.at-left-bottom img {
-  order: 1;
-}
-
-.war__block-shield span {
-  order: 1;
-  margin-right: 4rem;
-  text-align: right;
-}
-
-.war__block-shield.at-left-bottom span {
-  order: 2;
-  margin-right: 0;
-  margin-left: 4rem;
-  text-align: left;
-}
-
-.war__block-icon-wrapper {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transform: translateY(-50%);
-}
-.war__block-icon-wrapper::before {
-  flex-shrink: 0;
-  display: block;
-  width: calc(50% - 17rem);
-  height: 1px;
-  content: '';
-  background-image: linear-gradient(to right, transparent, var(--c10one));
-}
-
-.war__block-icon-wrapper::after {
-  flex-shrink: 0;
-  display: block;
-  width: calc(50% - 17rem);
-  height: 1px;
-  content: '';
-  background-image: linear-gradient(to left, transparent, var(--c10one));
-}
-
-.war__block-icon {
-  flex-shrink: 0;
-  display: block;
-  width: 34rem;
-  height: 34rem;
-  object-fit: contain;
-  object-position: center;
-}
-
-.war__block-info {
-  display: flex;
-  align-items: center;
-  position: absolute;
-  bottom: 12rem;
-  left: 0;
-}
-
-.war__block-info.at-right-top {
-  bottom: initial;
-  left: initial;
-  right: 0;
-  top: 12rem;
-}
-
-.war__block-info svg {
-  order: 1;
-  width: 34rem;
-  height: 34rem;
-  margin-right: 4rem;
-}
-
-.war__block-info.at-right-top svg {
-  order: 2;
-  margin-right: 0;
-  margin-left: 4rem;
-}
-
-.war__block-info p {
-  margin: 0;
-  order: 2;
-}
-
-.war__block-info.at-right-top p {
-  order: 1;
-  text-align: right;
-}
-
-.war__block-info span {
-  display: block;
-}
-
-.war__block-second-side {
-  position: absolute;
-  bottom: 12rem;
-  right: 0;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-.war__block-second-side img {
-  display: block;
-  width: 34rem;
-  height: 34rem;
-  object-fit: contain;
-  object-position: center;
-}
-
-.war__block-second-side span {
-  margin-right: 4rem;
-  width: 100rem;
-  text-align: right;
-}
-
-.war__par-rows {
-  padding-top: 2rem;
-  font-size: 14rem;
-  border: 1px solid var(--c30);
-}
-
-.war__par-rows--nop {
-  padding-top: 0;
-}
-
-.war__par-rows h2 {
-  height: 24rem;
-  margin: 0;
-  padding: 0 12rem;
-  background-image: linear-gradient(to right, transparent,  var(--c30), transparent);
-  font-size: 14rem;
-  font-weight: 400;
-  line-height: 24rem;
-  text-align: center;
-  letter-spacing: 0.5px;
-}
-
-.war__par-rows p {
-  display: flex;
-  justify-content: space-between;
-  height: 24rem;
-  margin: 0;
-  padding: 0 12rem;
-  line-height: 24rem;
-}
-
-.war__par-table-title {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
-  text-align: center;
-  line-height: 36rem;
-  height: 36rem;
-  font-size: 14rem;
-  font-weight: 400;
-  border-left: 1px solid var(--c30);
-  border-right: 1px solid var(--c30);
-}
-
-.war__par-table-title::before {
-  flex-shrink: 0;
-  margin-right: 6rem;
-  display: block;
-  width: 75rem;
-  height: 1px;
-  content: '';
-  background-image: linear-gradient(to right, transparent, var(--c10one));
-}
-
-.war__par-table-title::after {
-  flex-shrink: 0;
-  margin-left: 6rem;
-  display: block;
-  width: 75rem;
-  height: 1px;
-  content: '';
-  background-image: linear-gradient(to left, transparent, var(--c10one));
-}
-
-.war__par-table {
-  width: 100%;
-  border: 1px solid var(--c30);
-  border-collapse: collapse;
-  font-size: 14rem;
-  padding-top: 4rem;
-}
-
-.war__par-table tr:nth-of-type(even) {
-  background-color: var(--c30);
-}
-
-.war__par-table.odd tr:nth-of-type(odd) {
-  background-color: var(--c30);
-}
-
-.war__par-table.odd tr:nth-of-type(even) {
-  background-color: initial;
-}
-
-.war__par-table tr td:first-of-type {
-  padding-left: 12rem;
-}
-
-.war__par-table tr td:last-of-type {
-  padding-right: 12rem;
-  text-align: right;
-}
-
-.war__par-table tr td {
-  padding: 4rem 0;
-}
-
-.war__par-front {
-  padding: 12rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-left: 1px solid var(--c30);
-  border-right: 1px solid var(--c30);
-}
-
-.war__par-front-left {
-  display: flex;
-  flex-direction: column;
-}
-
-.war__label-text {
-  display: flex;
-  justify-content: space-between;
-  width: 130rem;
-  margin: 0;
-  font-size: 14rem;
-}
-
-.war__label {
-  position: relative;
-  display: flex;
-  width: 130rem;
-  height: 24rem;
-  margin-bottom: 12rem;
-  align-items: center;
-}
-
-.war__label::after {
-  position: absolute;
-  left: 0;
-  top: 0;
-  display: block;
-  width: 100%;
-  height: 100%;
-  content: '';
-  border: 1px solid var(--c10one);
-  pointer-events: none;
-}
-
-.war__label select {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  font-size: 16rem;
-  line-height: 16rem;
-  letter-spacing: -0.05em;
-  padding: 0 5rem;
-  border: 0;
-  background-color: var(--c60);
-  color: var(--c10one);
-  outline: none;
-  appearance: none;
-}
-
-.war__label select:focus {
-  box-shadow: 0 0 1rem 0 var(--c10one);
-}
-
-.war__label svg {
-  position: absolute;
-  right: 5rem;
-  top: 8rem;
-  width: 19rem;
-  height: 10rem;
-  pointer-events: none;
-}
-
-.war__par-send {
-  border: 1px solid var(--c30);
-  border-top: none;
-}
-
-.war__par-send-title {
-  display: flex;
-  justify-content: space-between;
-  margin: 0;
-  font-size: 14rem;
-  line-height: 30rem;
-  padding: 0 12rem;
-  background-color: var(--c30);
-}
-
-.war__par-send-common {
-  display: flex;
-  justify-content: space-between;
-  margin: 0;
-  font-size: 14rem;
-  line-height: 30rem;
-  padding: 0 12rem;
-}
-
-.war__par-send-common-right {
-  position: relative;
-  display: flex;
-  align-items: center;
-  flex-shrink: 0;
-  font-size: 14rem;
-  line-height: 24rem;
-}
-
-.war__par-send-common-right::before {
-  position: absolute;
-  top: 5rem;
-  left: 0;
-  display: block;
-  width: 80rem;
-  height: 18rem;
-  content: '';
-  border: 1px solid var(--c10one);
-  opacity: 0.5;
-  pointer-events: none;
-}
-
-.war__par-send-common-right input{
-  width: 80rem;
-  height: 18rem;
-  line-height: 18rem;
-  padding: 0 6rem;
-  margin-right: 6rem;
-  background-color: transparent;
-  border: 0;
-  color: inherit;
-  text-align: right;
-}
-
 @media (min-width: 1200px) {
   .war {
     margin-top: 100rem;
     margin-left: 330rem;
     height: calc(100vh - 100rem);
-  }
-  .war__grid {
-    display: grid;
-    grid-template-columns: 336rem 168rem 168rem 336rem;
-    gap: 30rem;
-    width: max-content;
-    margin: 0 auto;
-  }
-  .war__title {
-    grid-column: 1 / 3;
-    height: 20rem;
-  }
-  .war__par {
-    height: initial;
-  }
-  .war__par:nth-of-type(1) {
-    grid-column: 1 / 2;
-    margin-bottom: 0;
-  }
-  .war__par:nth-of-type(2) {
-    grid-column: 2 / 4;
-    margin-bottom: 0;
-  }
-  .war__par:nth-of-type(3) {
-    grid-column: 4 / 5;
-    margin-bottom: 0;
-  }
-  .war__par:nth-of-type(4) {
-    grid-column: 1 / 3;
-    width: 534rem;
-    height: 300rem;
-    overflow-y: auto;
-  }
-  .war__par:nth-of-type(5) {
-    grid-column: 3 / 5;
-    width: 534rem;
-    height: 300rem;
-    overflow-y: auto;
-  }
-  .war__par-title-svg {
-    display: none;
   }
 }
 
