--- a/player/templates/player/redesign/overview.html
+++ b/player/templates/player/redesign/overview.html
@@ -671,7 +671,7 @@
           <!--Отправка сообщений, стикеры-->
           <div class="overview__chat-controls">
             <!--ввод ссобщения-->
-            <input class="overview__chat-controls-input" id="chat-message-input-{{ LANGUAGE_CODE }}" type="text">
+            <input maxlength="500" class="overview__chat-controls-input" id="chat-message-input-{{ LANGUAGE_CODE }}" type="text">
             <!--кнопка стикеров-->
             <button class="overview__chat-controls-btn" onclick="showHideStickers()">
               <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
