--- a/chat/templates/chat/dialogue.html
+++ b/chat/templates/chat/dialogue.html
@@ -28,14 +28,14 @@
 				  {{ player.pk|json_script:"player_id" }}
 				<div class="overview__chat-messages" id="chat-log-{% localize off %}{{ chat_id }}{% endlocalize %}">
 					{% if messages|get_len >= 50 %}
-					<button class="overview__chat-more longBtnWihoutCorners" onclick="loadPrevBlock()">Загрузить предыдущие сообщения</button>
+					<button class="overview__chat-more longBtnWihoutCorners" onclick="loadPrevBlock()" style="cursor: pointer">Загрузить предыдущие сообщения</button>
 					{% endif %}
 					{% for message in messages %}
                 		{% if message|dict_key:'content' != 'ban_chat' and message|dict_key:'content' != 'delete_message' %}
 					<!--сообщение-->
 					<div {% localize off %} class="overview__chat-message {% if message|dict_key:'author' == player.pk %} overview__chat-message--my{% endif %}" data-counter='{{  message|dict_key:"counter" }}' data-sender='{{  message|dict_key:"author" }}' {% endlocalize %}>
 						<!--аватарка-->
-						<a class="overview__chat-ava-link" href="##">
+						<a class="overview__chat-ava-link" href='/profile/{% localize off %}{{ message|dict_key:"author" }}{% endlocalize %}'>
 						{% if message|dict_key:'image_link' == 'nopic' %}
 						  {% nopic player 'overview__chat-ava' %}
 						{% else %}
@@ -86,14 +86,14 @@
 					<!--ввод ссобщения-->
 					<input maxlength="500" class="overview__chat-controls-input" id="chat-message-input-{% localize off %}{{ chat_id }}{% endlocalize %}" type="text">
 					<!--кнопка стикеров-->
-					<button class="overview__chat-controls-btn" onclick="showHideStickers()">
+					<button class="overview__chat-controls-btn" onclick="showHideStickers()" style="cursor: pointer">
 						<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M5.72265 16.416L5.75604 16.4383L5.79255 16.4549C6.16195 16.6234 6.80307 16.7852 7.36829 16.498C7.85388 16.2513 8.12977 15.7628 8.19346 15.0718C11.2029 15.7728 14.8895 15.8176 17.3536 13.3536L16.6464 12.6464C14.4142 14.8787 10.8684 14.7705 7.82502 13.948C7.24406 13.791 6.68887 13.6098 6.17454 13.4182C5.42077 13.1374 4.75819 12.8356 4.23394 12.5581L3.76606 13.4419C4.1604 13.6507 4.62175 13.8693 5.13377 14.0826C5.01936 14.2556 4.92498 14.4532 4.87513 14.6709C4.80935 14.958 4.82304 15.2766 4.96941 15.5939C5.11315 15.9055 5.36778 16.1794 5.72265 16.416ZM6.10805 14.4581C6.45967 14.5831 6.82762 14.7028 7.20806 14.8135C7.19709 15.4142 6.99786 15.5645 6.91531 15.6065C6.75922 15.6858 6.49342 15.6659 6.2432 15.5607C6.02207 15.4069 5.92212 15.2719 5.87746 15.1751C5.83321 15.0791 5.82815 14.989 5.84987 14.8942C5.88379 14.7461 5.98435 14.5899 6.10805 14.4581ZM5 8.5H8V7.5H5V8.5ZM19.5 10C19.5 15.2467 15.2467 19.5 10 19.5C4.75329 19.5 0.5 15.2467 0.5 10C0.5 4.75329 4.75329 0.5 10 0.5C15.2467 0.5 19.5 4.75329 19.5 10Z" stroke="var(--c10two)"/>
 							<circle cx="14" cy="8" r="1.5" stroke="var(--c10two)"/>
 						</svg>
 					</button>
 					<!--кнопка отправки-->
-					<button class="overview__chat-controls-btn" id="chat-message-submit-{% localize off %}{{ chat_id }}{% endlocalize %}">
+					<button class="overview__chat-controls-btn" id="chat-message-submit-{% localize off %}{{ chat_id }}{% endlocalize %}" style="cursor: pointer">
 						<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M5 3.93782L15.5 10L5 16.0622L5 3.93782Z" stroke="var(--c10two)"/>
 							<path d="M0.5 19.5V4.20711L4.20711 0.5H19.5V15.7929L15.7929 19.5H0.5Z" stroke="var(--c10two)"/>
