фикс диалога с ID > 1000

--- a/player/templates/player/redesign/view_profile.html
+++ b/player/templates/player/redesign/view_profile.html
@@ -14,7 +14,7 @@
 			</span>
 
 			<!-- кнопка написать игроку -->
-			<button class="ct__nickname-message ct__square-mid-btn" onclick="window.location.href = '/im/{{ char.pk }}/'">
+			<button class="ct__nickname-message ct__square-mid-btn" onclick="window.location.href = '/im/{% localize off %}{{ char.pk }}{% endlocalize %}/'">
 				<svg width="43" height="27" viewBox="0 0 43 27" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<path d="M16.2073 14.4351L0 25.6548V1.00525L16.2073 14.4351Z" fill="var(--c10two)"/>
 					<path d="M25.8514 14.4398L42.0587 25.6594V1.00989L25.8514 14.4398Z" fill="var(--c10two)"/>
