уведомления о новых сообщениях

--- a/chat/templates/chat/dialogues.html
+++ b/chat/templates/chat/dialogues.html
@@ -15,11 +15,11 @@
 {% load redesign.template_svg.nopic %}
 
 {% block content %}
-<!--<style>-->
-<!--  .overview__chat-message&#45;&#45;new {-->
-<!--    color: var(&#45;&#45;c10two)!important;-->
-<!--  }-->
-<!--</style>-->
+<style>
+  .overview__chat-message--new {
+    color: var(--c10two)!important;
+  }
+</style>
 <main>
 
   <section class="dialogs custom-scroll">
