--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -3868,6 +3868,7 @@ p.overview__love-stat-timer {
   background-color: transparent;
   height: 24rem;
   width: 100%;
+  color: white;
 }
 
 .war__units-count > label {
