Модификатор Силы к урону

--- a/war/templates/war/redesign/EventWar.html
+++ b/war/templates/war/redesign/EventWar.html
@@ -13,6 +13,8 @@
     const war_id = '{{ war.pk }}';
     const war_type = 'EventWar';
 
+    const player_pwr = {% localize off %}{{ player.power }}{% endlocalize %};
+
     const chat_conn_type = "{% if http_use %}ws{% else %}wss{% endif %}";
 </script>
 
