баг с нулем в войне

--- a/war/templates/war/redesign/EventWar.html
+++ b/war/templates/war/redesign/EventWar.html
@@ -208,7 +208,7 @@
 			<label>
                 <input type="number" min="0"
                                            max="{% localize off %}{{ units_dict|dict_key:unit.good }}{% endlocalize %}"
-                                           value="0" step="1"
+                                           step="1"
                                            id="{% localize off %}{{ unit.pk }}{% endlocalize %}"
                                            name="{% localize off %}{{ unit.pk }}{% endlocalize %}"
                                            class="unit_input" maxlength="3">
