--- a/war/templates/war/redesign/EventWar.html
+++ b/war/templates/war/redesign/EventWar.html
@@ -19,7 +19,9 @@
 </script>
 
 <script src='{% static "js/EventWar.js" %}?{{ csrf_token }}'></script>
+{% if war.running %}
 <script src='{% static "js/war_socket.js" %}?{{ csrf_token }}'></script>
+{% endif %}
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 {% endblock %}
 
